#
# TODO Could split out only those source files needed to support each test. See
# golay test for example.

incdirUT = include_directories(
    '../include'
)

    
#test('mpduHeader', unit_test_mpduHeader,
#    timeout: 150
#    )
    
#unit_test_mpdu = executable('unit_test-mpdu', 'qa_mpdu.cpp', core_source_files, third_party_source_files,
#    include_directories : incdirUT,
#    dependencies: [gtest_dep]
#    )